--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <button type=button herf="https://scratch.mit.edu/users/4Dteams" ><a href="https://scratch.mit.edu/users/4Dteams" >我看看</a></button><br><br>
     <div id="codeshow" >
       <h2>作品:</h2><br>
-      <h6>1. </h6>
+      <h6>1. cat running -- Jensen </h6><button type="button"><a href="https://scratch.mit.edu/projects/1040334866/" >我看看</a></button><br>
       </div>
    </main>
-</body>
+</body
 </html>
