--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <h6>1. <button type="button"><a href="https://scratch.mit.edu/projects/1040334866/" >cat running -- Jensen </a></button><br></h6>
       <h6>2. <button type="button"><a href="https://scratch.mit.edu/projects/1040347317/" >fire alarm -- Jensen </a></button><br></h6>
       <h6>4. <button type="button"><a href="https://scratch.mit.edu/projects/1040370494/" >Flappy Bird -- John </a></button><br></h6>
+      <h6>4. <button type="button"><a href="https://scratch.mit.edu/projects/1040399396/" >game -- Jensen </a></button><br></h6>
       </div>
    </main>
 </body>
