--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
       <h6>2. <button type="button"><a href="https://scratch.mit.edu/projects/1040347317/" >fire alarm -- Jensen </a></button><br></h6>
       <h6>4. <button type="button"><a href="https://scratch.mit.edu/projects/1040370494/" >Flappy Bird -- John </a></button><br></h6>
       <h6>4. <button type="button"><a href="https://scratch.mit.edu/projects/1040399396/" >game -- Jensen </a></button><br></h6>
+      </div><br>
+    <div name="poster" >
+      <div class="toast show">
+         <div class="toast-header">
+         弹窗标题
+         <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
       </div>
+      <div class="toast-body">
+      这是一个Bootstrap 5弹窗示例。
+      </div>
+      </div>
+   </div>
    </main>
 </body>
 </html>
