--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <div name="poster" >
       <div class="toast show">
          <div class="toast-header">
-         弹窗标题
+         緊急通知
          <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
       </div>
-      <div class="toast-body">
-      这是一个Bootstrap 5弹窗示例。
+      <div class="toast-body" >
+      數據中心遭遇黑客入侵，請小心
       </div>
       </div>
    </div>
