--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <h6>4. <button type="button"><a href="https://scratch.mit.edu/projects/1040399396/" >game -- Jensen </a></button><br></h6>
       </div><br>
     <div name="poster" >
-      <div class="toast show">
+      <!--<div class="toast show">
          <div class="toast-header">
          緊急通知
          <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
       </div>
       <div class="toast-body" >
       數據中心遭遇黑客入侵，請小心
-      </div>
+      </div>-->
       </div>
    </div>
    </main>
