--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h6>2. <button type="button"><a href="https://scratch.mit.edu/projects/1040347317/" >fire alarm -- Jensen </a></button><br></h6>
       <h6>4. <button type="button"><a href="https://scratch.mit.edu/projects/1040370494/" >Flappy Bird -- John </a></button><br></h6>
       <h6>5. <button type="button"><a href="https://scratch.mit.edu/projects/1040399396/" >game -- Jensen </a></button><br></h6>
-      <h6>6. <button type="button"><a href="https://scratch.mit.edu/projects/1040715316/" >obby -- john</a></button><br></h6>
+      <h6>6. <button type="button"><a href="https://scratch.mit.edu/projects/1040715316/" >obby -- john & Jensen</a></button><br></h6>
       </div><br>
     <div name="poster" >
       <!--<div class="toast show">
