--- a/notice.htm
+++ b/notice.htm
@@ -15,7 +15,7 @@
     </h3>
   </center><br>
   <main>
-    
+    <img src="1notice.svg" ></img>
    </main>
   <!--<center><div name="sitebar" >
     <button type="button" ><a href="/index.html" >主頁</a></button>
