--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
       <h6>7. <button type="button"><a href="https://scratch.mit.edu/projects/1042502850/" >developer test -- Jensen</a></button><br></h6>
       <h6>8(7A). <button type="button"><a href="https://scratch.mit.edu/projects/1042584461/" >monkey eat apple -- Jensen</a></button><br></h6>
       </div><br>
+    <div id="codeshow" >
+      <h2>介紹:</h2><br>
+      <h6>4Dteams昰由Jensen在scratch內做的用戶，入面的7個遊戲都是Jensen 和 John 一起做的。 John是Jensen的朋友，Jensen 叫John一起做遊戲。John答應了。之後，Jensen 做了一個網站，用來存John 和 Jensen 的遊戲，讓他們可以不用登入 scratch才可以玩遊戲。這個team成立曰期是 22/6/2024。 這就是John，把 4Dteams的歷史消息發出來。</h6><br><br>
+      <h6>4Dteams is a user created by Jensen in scratch. The 7 games included are all created by Jensen and John. John is Jensen's friend, and Jensen asks John to play games together. John agreed. After that, Jensen made a website to store John and Jensen's games so that they could play the games without logging in to scratch. The establishment date of this team is 22/6/2024. This is John, sending out the historical news of 4Dteams.</h6>
+      </div><br>
     <div name="poster" >
       <!--<div class="toast show">
          <div class="toast-header">
