--- a/worldtcps-index.html
+++ b/worldtcps-index.html
@@ -18,7 +18,7 @@
     <div id="people" >
       <h2>人物:</h2><br>
       <h6>4D(1 / 24)<button type="button"><a href="worldtcps-4d1220232024info.htm" >資憂 -- 2023-2024</a></button><br></h6>
-      <h6>4D(1 / 24)<button type="button"><a href="https://ebookweb.ephhk.com/?name=tcp1201511&password=tcps3006&key=4dteam--allyouknowwebsite1" >FUNG CHUN FUNG(tcps admin aera baned) -- 2023-2024</a></button><br></h6>
+      <h6>4D(1 / 24)<button type="button"><a href="worldtcps-4d1220232024info.htm" >FUNG CHUN FUNG(tcps admin aera baned) -- 2023-2024</a></button><br></h6>
       </div><br>
     <div name="poster" >
       <div class="toast show">
