--- a/worldtcps-4d1220232024info.htm
+++ b/worldtcps-4d1220232024info.htm
@@ -10,7 +10,7 @@
 	<Center><h1>肥豬肉</h1></Center>
     </div>
     <div name="info" >
-	<p>真實名字 :</p>
+	<p>真實名字 : FUNG CHUN FUNG</p>
     <p>年度 : 2023-2024</p>
     <p>班級 : 4D</p>
     <p>原因 : teacher叫的</p>
