--- a/worldtcps-4d1220232024difenggrouphkltdinfo.htm
+++ b/worldtcps-4d1220232024difenggrouphkltdinfo.htm
@@ -160,7 +160,7 @@ checkAndBlockNumber(phoneNumber);
     <div name="info" >
     <p>年度 : 2023-2024</p>
     <p>班級 : 4D</p>
-    <p>原因 : <a href="https://api.whatsapp.com/send?phone=85260671063&text=fuckyou!" >name 欺負人</a></p>
+    <p>原因 : <a href="worldtcps-4d1220232024info.htm" >肥豬肉</a><a href="https://api.whatsapp.com/send?phone=85260671063&text=fuckyou!" >欺負人</a></p>
     <p>類別 : 組織</p>
     </div>
   </main>
