--- a/portal-e.html
+++ b/portal-e.html
@@ -21,7 +21,7 @@
         </h2><br>
         <main>
             <center><br>
-                <form action="verifyaccount.jsp" method="get">
+                <form action="verifyaccount.html" method="get">
                     <!--https://www.w3schools.com/tags/att_form_method.asp -- action="/action_page.php" method="get" -->
                     <div class="mb-3 mt-3">
                         <label for="name" class="form-label">English all name:</label>
