--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h6>3. <button type="button"><a href="https://scratch.mit.edu/projects/1040370494/" >Flappy Bird -- John </a></button><br></h6>
       <h6>4. <button type="button"><a href="https://scratch.mit.edu/projects/1040399396/" >game -- Jensen </a></button><br></h6>
       <h6>5. <button type="button"><a href="https://scratch.mit.edu/projects/1040715316/" >obby -- john & Jensen</a></button><br></h6>
-      <h6>6. <button type="button"><a href="https://scratch.mit.edu/projects/1042000902/" >mod menu v9 -- john & Jensen</a></button><br></h6>
+      <h6>6. <button type="button"><a href="https://scratch.mit.edu/projects/1042000902/" >mod menu beta v1.03.1 -- john & Jensen</a></button><br></h6>
       <h6>7. <button type="button"><a href="https://scratch.mit.edu/projects/1042502850/" >developer test -- Jensen</a></button><br></h6>
       <h6>8(7A). <button type="button"><a href="https://scratch.mit.edu/projects/1042584461/" >monkey eat apple -- Jensen</a></button><br></h6>
       </div><br>
