--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       <h6>4Dteams is a user created by Jensen in scratch. The 7 games included are all created by Jensen and John. John is Jensen's friend, and Jensen asks John to play games together. John agreed. After that, Jensen made a website to store John and Jensen's games so that they could play the games without logging in to scratch. The establishment date of this team is 22/6/2024. This is John, sending out the historical news of 4Dteams.</h6>
       </div><br>
     <div name="poster" >
+    <p>精選作品: </p>
+    <button><a href="https://scratch.mit.edu/projects/1040399396/" >1. Game -- Jensen</a></button><br>
+    <button><a href="https://scratch.mit.edu/projects/1042000902" >2. mod menu</a></button><br>
+    </div>
       <!--<div class="toast show">
          <div class="toast-header">
          緊急通知
