--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <h6>6. <button type="button"><a href="https://scratch.mit.edu/projects/1042000902/" >mod menu beta v1.03.1 -- john & Jensen</a></button><br></h6>
       <h6>7. <button type="button"><a href="https://scratch.mit.edu/projects/1042502850/" >developer test -- Jensen</a></button><br></h6>
       <h6>8(7A). <button type="button"><a href="https://scratch.mit.edu/projects/1042584461/" >monkey eat apple -- Jensen</a></button><br></h6>
+      <h6>9. <button type="button"><a href="https://scratch.mit.edu/projects/1046239756/" >mod menu in game mod v1 - game1 -- Jensen</a></button><br></h6>
       </div><br>
     <div id="codeshow" >
       <h2>介紹:</h2><br>
